2014-11-05  Christopher Kelly  <christopher.kelly28@gmail.com>

	* Add matlab/ThirdPartyToolbox/loaddcmdir.m,
	* Add matlab/ThirdPartyToolbox/license-loaddcmdir.txt:

	- add loaddcmdir.m function by Laszlo Balkay, last updated 05 Oct 2011,
	
	- reads metadata from DICOMDIR file and shows list of the different DICOM SERIES in Pop-up menus
	
	http://www.mathworks.co.uk/matlabcentral/fileexchange/7926-dicomdir-reader
 
2014-11-04  Ramon Casero  <rcasero@gmail.com>

	* Add test/test_skeleton_label.m: (0.1.0)

	- Test script for skeleton_label.m.

	- First script that generates images to be included in the wiki as
	documentation.

2014-11-03  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/elastix.m: (0.4.2)

	- Fix bug. Other functions expect the intial transform to be
	opts.t0 instead of opts.T0.

	* matlab/ItkToolbox/elastix_read_reg_output.m: (0.2.2)

	- Fix bug. Sometimes, elastix can produce an empty iteration info
	file. Trying to read it gave an error. Now, if the file is empty
	we return empty iterInfo.

	* matlab/FileFormatToolbox/imread_list.m: (0.1.1)

	- Fix bug. Wrong variable name.

	* matlab/ManifoldToolbox/tri_sphparam.m: (0.4.5)

	- Even if the initial guess points provided by the user are within
	the sphere radius tolerance, we reproject them on the sphere,
	because tiny radius errors can create neighbourhoods that cannot
	be untangled.

	* matlab/CardiacToolbox/histology_intraframe_reg.m: (0.2.2)

	- Fix bug. Wrong number when checking number of output arguments.

	- Fix bug. Other functions expect the intial transform to be
	opts.t0 instead of opts.T0.

	- Rename input argument from PATHTOFILES to PATHSTR for uniformity
	with other function in the toolbox.

2014-10-31  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/FileFormatToolbox/imread_list.m: (0.1.0)

	- IMREAD_LIST  Read list of image files into volume.

	* Rename matlab/CardiacToolbox/blockface_imread_gray.m (0.1.1) as
	matlab/FileFormatToolbox/imread_list.m: (0.1.0)
